Change in docs: Added the "different effects" demo, to showcase that you can specify the effect pr. slide.

3.0.1
Change in script: The empty string is now an acceptable numericText.
Change in script: Fixed that "sudoSlider.getValue('autoAnimation');" always returned undefined

3.0.2
Change in script: You can use any tag as slide containers, instead of before where you needed a ul tag with child tag (the old way still works). See the basic example to see how this new behaviour works.

3.0.3
Change in script: Fixed that the slide specified by "startSlide" wasn't loaded first.
Change in script: Fixed some flickering that sometimes occurred when ajaxLoading slides ahead of the current.
Change in script: Fixed some potential flickering at the end of an animation. (Only happened on iPad).
Change in script: All ajax loads are now finished at the first available time when no animation is running.

3.0.4
Change in script: Fixed that the last box in a box animation didn't fade in at all in jQuery < 1.9. In case of fade animations, the last box was the only box.
Change in docs: Added the "fadein slider on load" demo.

3.0.5
Change in script: Added the animationZIndex option. So you can change the z-index that the "animation" boxes have (This effects every effect except slide).

3.1.0
Change in script: Added a goToNext() method when making your own effects. By calling this the slider will instantly go to the next slide, and you can continue the effect afterwards.
Change in script: Removed the boxes and boxesGrow effects.
Change in script: Changed the remaining box effects, so that when they grow (in/out) the movement originates from the center.
Change in script: Added a whole bunch of new effect. And renamed some of the existing effects.
Change in docs: Upgraded to jQuery 1.10.1
Change in script: If you specify the attribute "data-effectout" on a slide, that will specify the effect when leaving that slide. The data-effectout takes precedence over data-effect.