@@ -1,0 +1,72 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title>Sudo Slider | All the effects</title>
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+    <link rel="STYLESHEET" type="text/css" href="../css/style.css">
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <script type="text/javascript" src="../js/jquery.sudoSlider.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+            var effects = $.fn.sudoSlider.effects;
+            var useEffect = function (obj) {
+                alert("Effect not specified");
+                obj.callback();
+            };
+
+            var sudoSlider = $("#slider").sudoSlider({
+                effect: function (obj) {
+                    useEffect(obj);
+                },
+                prevNext: true,
+                controlsFade: false,
+                continuous: true
+            });
+            var container = $("#effectLinksHolder");
+            var count = 0;
+            $.each(effects, function (effectName, effect) {
+                count++;
+                container.append($("<a> " + effectName + " </a> <span>|</span> ").click(function () {
+                    useEffect = effect;
+                    sudoSlider.goToSlide("next");
+                }))
+            });
+            $("#effectCounter").text(count);
+        });
+    </script>
+
+
+
+
+</head>
+<body>
+<div id="container">
+    <h1>Sudo Slider jQuery Plugin - All the <span id="effectCounter"></span> effects</h1>
+    <div style="position:relative;">
+        <div id="slider">
+            <ul>
+                <li><img src="../images/01.jpg" alt="image description"/><div style="position:absolute;top:50px;left:50px;"><p style="font-size:50px;color:white;">This is a text</p></div></li>
+                <li><img src="../images/02.jpg" alt="image description"/><div style="position:absolute;top:50px;left:50px;"><p style="font-size:50px;color:blue;">IM AM WRITING HERE</p></div></li>
+                <li><img src="../images/03.jpg" alt="image description"/><div style="position:absolute;top:50px;left:50px;"><p style="font-size:50px;color:green;">Rich text stuff</p></div></li>
+                <li><img src="../images/04.jpg" alt="image description"/><div style="position:absolute;top:50px;left:50px;"><p style="font-size:50px;color:red;">UGA UGA UGACHAKA</p></div></li>
+                <li><img src="../images/05.jpg" alt="image description"/><div style="position:absolute;top:50px;left:50px;"><p style="font-size:50px;color:pink;">Holy crap, THIS IS AWESOME</p></div></li>
+            </ul>
+        </div>
+        <div id="effectLinksHolder"></div>
+    </div>
+</div>
+<script type="text/javascript">
+    /* Google Analytics, please remove
+     var _gaq = _gaq || [];
+     _gaq.push(['_setAccount', 'UA-20484420-1']);
+     _gaq.push(['_trackPageview']);
+
+     (function() {
+     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+     })();
+     /* */
+</script>
+</body>
+</html>
