@@ -325,4 +325,5 @@ Change in script: Removed the boxes and boxesGrow effects.
 Change in script: Changed the remaining box effects, so that when they grow (in/out) the movement originates from the center.
 Change in script: Added a whole bunch of new effect. And renamed some of the existing effects.
 Change in docs: Upgraded to jQuery 1.10.1
+Change in docs: Changed the explorer effects, to show the effects in a nicer way. The old explorer effects is now "all effects".
 Change in script: If you specify the attribute "data-effectout" on a slide, that will specify the effect when leaving that slide. The data-effectout takes precedence over data-effect.
